[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "linkify-it-py"
authors = [{ name = "tsutsu3" }]
description = "Links recognition library with FULL unicode support."
urls = { Homepage = "https://github.com/tsutsu3/linkify-it-py" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["linkify", "linkifier", "autolink", "autolinker"]
dependencies = ["uc-micro-py"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "coverage", "pytest-cov"]
dev = ["pre-commit", "isort", "flake8", "black", "pyproject-flake8"]
benchmark = ["pytest", "pytest-benchmark"]
doc = ["sphinx", "sphinx_book_theme", "myst-parser"]

[tool.setuptools]
packages = ["linkify_it"]

[tool.setuptools.dynamic]
version = { attr = "linkify_it.__version__" }

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
